# Cash-Smurfing-Detection

./: .gitignore  README.md  pyproject.toml
src/smurf_detector/: cli.py  detect.py
