[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tm-smurf-detector"
version = "0.1.0"
description = "Cash smurfing detector for TM (SQLite). Stdlib-only."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]